--- a/MSTestMoodAnalyzer/MSTestMoodAnalyzer.csproj
+++ b/MSTestMoodAnalyzer/MSTestMoodAnalyzer.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MoodAnalyserPrb\MoodAnalyserPrb.csproj">
+      <Project>{aee3d60d-679d-4b88-b799-694bae8c9a64}</Project>
+      <Name>MoodAnalyserPrb</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
