--- a/MoodAnalyserPrb/MoodAnalyserPrb.csproj
+++ b/MoodAnalyserPrb/MoodAnalyserPrb.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exception.cs" />
+    <Compile Include="MoodAnalyserException.cs" />
+    <Compile Include="MoodAnalyserFactory.cs" />
+    <Compile Include="MoodAnalyzer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
